@@ -47,6 +47,9 @@ Release 1.1.2 - 2012.12.05
     MAPREDUCE-4697. Fixed a failing unit test - TestMapredHeartbeat.
     (Gopal V via sseth)
 
+    MAPREDUCE-4699. Fixed unit test failures - TestFairScheduler and 
+    TestCapacityScheduler. (Gopal V via sseth)
+
 Release 1.1.1 - 2012.11.18
 
   INCOMPATIBLE CHANGES
